@@ -1,6 +1,6 @@
 Package: mi
-Version: 0.08-01
-Date: 2009-6-11
+Version: 0.08-02
+Date: 2009-6-17
 Title: Missing Data Imputation and Model Checking
 Author: Andrew Gelman <gelman@stat.columbia.edu>, Jennifer Hill
         <jh1030@columbia.edu>, Masanao Yajima <my2167@columbia.edu>,
@@ -11,6 +11,6 @@ Depends: methods, MASS, nnet, car, arm, lme4, R2WinBUGS, abind
 Description: Missing-data imputation and model checking
 URL: http://www.stat.columbia.edu/~gelman/
 License: GPL (>= 2)
-Packaged: 2009-06-17 04:25:27 UTC; SUYS
+Packaged: 2009-06-18 16:32:54 UTC; SUYS
 Repository: CRAN
-Date/Publication: 2009-06-17 08:01:06
+Date/Publication: 2009-06-19 06:38:08
