@@ -46,17 +46,16 @@ mi.count <- function ( formula, data = NULL, start = NULL,
   tt <- terms(bglm.imp)
   Terms <- delete.response(tt)
   m <- model.frame(Terms, data=data,  xlev = bglm.imp$xlevels)
-  X <- as.matrix(model.matrix(Terms, m, contrasts.arg = bglm.imp$contrasts)[,-1])
+  X <- as.matrix(model.matrix(Terms, m, contrasts.arg = bglm.imp$contrasts))
 ############################
 
-  determ.pred <- predict( bglm.imp, newdata = data, type = "response" )
+  determ.pred <- predict(bglm.imp, newdata = data, type = "response" )
 
   if(n.mis>0){
     if(draw.from.beta){
-      sim.bglm.imp    <- sim(bglm.imp,1)
-      lambda <- exp(tcrossprod(as.matrix(cbind(X[mis,1,drop=FALSE]*0+1,X[mis,,drop=FALSE])),
-                                sim.bglm.imp$coef))
-      random.pred     <- rpois(n.mis, lambda)
+      sim.coef  <- sim(bglm.imp,1)$coef
+      lambda <- exp(tcrossprod(X[mis,,drop=FALSE], sim.coef))
+      random.pred <- rpois(n.mis, lambda)
     }
     else{
       random.pred <- rpois(n.mis, determ.pred[mis])
